--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es" class="scroll-smooth">
   <head>
@@ -20,6 +19,9 @@
               sans: ['Inter', 'sans-serif'],
               display: ['Space Grotesk', 'sans-serif'],
             },
+            screens: {
+              'tablet': {'min': '768px', 'max': '1023px'},
+            }
           }
         }
       }
@@ -29,7 +31,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-      @media (min-width: 1280px) {
+      /* Solo ocultar el cursor real en pantallas de escritorio (>= 1024px) */
+      @media (min-width: 1024px) {
         body, a, button, input, textarea, .cursor-pointer {
           cursor: none !important;
         }
@@ -98,29 +101,32 @@
         background: rgba(128, 128, 128, 0.1);
       }
 
-      .link-hover .custom-cursor {
-        transform: scale(3.5);
-        background: rgba(255, 255, 255, 1);
-        border-color: transparent;
-        mix-blend-mode: difference;
-      }
+      /* Solo aplicar efectos de hover si el cursor está visible (>= 1024px) */
+      @media (min-width: 1024px) {
+        .link-hover .custom-cursor {
+          transform: scale(3.5);
+          background: rgba(255, 255, 255, 1);
+          border-color: transparent;
+          mix-blend-mode: difference;
+        }
 
-      .cursor-clicking .custom-cursor {
-        transform: scale(0.7);
-      }
-      .link-hover.cursor-clicking .custom-cursor {
-        transform: scale(2.8);
-      }
+        .cursor-clicking .custom-cursor {
+          transform: scale(0.7);
+        }
+        .link-hover.cursor-clicking .custom-cursor {
+          transform: scale(2.8);
+        }
 
-      .safe-hover .custom-cursor {
-        mix-blend-mode: normal !important;
-        background: rgba(255, 255, 255, 0.9) !important;
-        border: 1px solid rgba(0, 0, 0, 0.2) !important;
-      }
+        .safe-hover .custom-cursor {
+          mix-blend-mode: normal !important;
+          background: rgba(255, 255, 255, 0.9) !important;
+          border: 1px solid rgba(0, 0, 0, 0.2) !important;
+        }
 
-      .cursor-hidden-active .custom-cursor {
-        opacity: 0 !important;
-        transform: scale(0) !important;
+        .cursor-hidden-active .custom-cursor {
+          opacity: 0 !important;
+          transform: scale(0) !important;
+        }
       }
     </style>
     <script type="importmap">
@@ -140,27 +146,35 @@
     <script type="module" src="/index.tsx"></script>
     <script>
       const cursor = document.createElement('div');
-      cursor.className = 'custom-cursor hidden xl:block';
+      // Cambiado de md:block a lg:block para que en tablets se oculte
+      cursor.className = 'custom-cursor hidden lg:block';
       document.body.appendChild(cursor);
 
       document.addEventListener('mousemove', (e) => {
-        requestAnimationFrame(() => {
-          cursor.style.left = e.clientX - 10 + 'px';
-          cursor.style.top = e.clientY - 10 + 'px';
-        });
+        // Solo mover si estamos en pantalla grande
+        if (window.innerWidth >= 1024) {
+          requestAnimationFrame(() => {
+            cursor.style.left = e.clientX - 10 + 'px';
+            cursor.style.top = e.clientY - 10 + 'px';
+          });
+        }
       });
 
-      document.addEventListener('mousedown', () => document.body.classList.add('cursor-clicking'));
-      document.addEventListener('mouseup', () => document.body.classList.remove('cursor-clicking'));
+      document.addEventListener('mousedown', () => {
+        if (window.innerWidth >= 1024) document.body.classList.add('cursor-clicking');
+      });
+      document.addEventListener('mouseup', () => {
+        if (window.innerWidth >= 1024) document.body.classList.remove('cursor-clicking');
+      });
 
-      const handleHover = () => document.body.classList.add('link-hover');
-      const handleUnhover = () => document.body.classList.remove('link-hover');
+      const handleHover = () => { if (window.innerWidth >= 1024) document.body.classList.add('link-hover'); };
+      const handleUnhover = () => { if (window.innerWidth >= 1024) document.body.classList.remove('link-hover'); };
       
-      const handleSafeHover = () => document.body.classList.add('safe-hover');
-      const handleSafeUnhover = () => document.body.classList.remove('safe-hover');
+      const handleSafeHover = () => { if (window.innerWidth >= 1024) document.body.classList.add('safe-hover'); };
+      const handleSafeUnhover = () => { if (window.innerWidth >= 1024) document.body.classList.remove('safe-hover'); };
 
-      const handleHideHover = () => document.body.classList.add('cursor-hidden-active');
-      const handleHideUnhover = () => document.body.classList.remove('cursor-hidden-active');
+      const handleHideHover = () => { if (window.innerWidth >= 1024) document.body.classList.add('cursor-hidden-active'); };
+      const handleHideUnhover = () => { if (window.innerWidth >= 1024) document.body.classList.remove('cursor-hidden-active'); };
 
       const addListeners = () => {
         document.querySelectorAll('a:not(.cursor-safe):not(.cursor-hide):not(.no-cursor-effect), .cursor-pointer:not(button):not(input):not(textarea):not(.cursor-safe):not(.cursor-hide):not(.no-cursor-effect)').forEach(el => {
